# app-store-reviews-anylizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 981a8acf90ad_create_review_samples_and_reviews_tables.py  ab52c69691be_widen_app_id_columns_to_bigint.py
app/: config.py  database.py  dependencies.py  exception_handlers.py  main.py
app/insights/: dependencies.py  gemini_classifier.py  gemini_insight_generator.py  routes.py  schemas.py  service.py  text_preparation.py
app/metrics/: routes.py  schemas.py  service.py
app/reports/: routes.py  service.py
app/reports/templates/: report.html
app/reviews/: collector.py  dependencies.py  models.py  routes.py  samples_service.py  schemas.py  service.py
app/reviews/appstore/: collector.py  errors.py  http.py  lookup_client.py  reviews_client.py  schemas.py
docs/: SENTIMENT_ANALYSIS_RESULTS.md
scripts/sentiment_eval/: baseline_lexicon.py  build_golden_dataset.py  collect_multi.py  collect_reviews.py  config.py  evaluate.py  gemini_sentiment.py
scripts/sentiment_eval/data/: golden_dataset.json  predictions_gemini.json  predictions_textblob.json  predictions_vader.json  raw_reviews.json
tests/: conftest.py
tests/insights/: test_gemini_classifier.py  test_gemini_insight_generator.py  test_insights_service.py  test_routes.py  test_text_preparation.py
tests/metrics/: test_metrics_service.py  test_routes.py
tests/reports/: test_reports_service.py  test_routes.py
tests/reviews/: test_appstore_clients.py  test_appstore_http.py  test_appstore_schemas.py  test_routes.py  test_samples_service.py
