[project]
name = "app-store-review-anylizer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "uvloop",
]
eval = [
    "vaderSentiment>=3.3.2",
    "textblob>=0.18.0",
    "google-genai>=1.0.0",
    "scikit-learn>=1.5.0",
]
