[project]
name = "app-store-review-anylizer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.7.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "vadersentiment>=3.3.2",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
    "uvloop",
]
eval = [
    "textblob>=0.18.0",
]
